--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ sudo: True
 
 matrix:
   include:
-    - python: '3.8'
-    - python: '3.8'
+    - python: '3.7'
+    - python: '3.7'
       arch: ppc64le
-    - python: '3.6'
-    - python: '3.6'
+    - python: '3.8'
+    - python: '3.8'
       arch: ppc64le
 install:
   - if [[ "$TRAVIS_CPU_ARCH" == "ppc64le" ]]; then 
@@ -38,6 +38,7 @@ install:
   - conda config --set always_yes yes
   - conda config --set auto_update_conda False
   - conda update -q --all
+  - conda install python=3.7
   - conda install -c conda-forge sparse
   - conda install  numpy flake8 pytest scipy dask multipledispatch cloudpickle numba mock scikit-learn jupyter   
   - pip install --no-deps -e .  
