--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,6 @@ sudo: True
 
 matrix:
   include:
-    - python: '2.7'
-      env: PYTHON_VERSION="2.7"
-    - python: '2.7'
-      arch: ppc64le
-      env: PYTHON_VERSION="2.7"
     - python: '3.7'
       env: PYTHON_VERSION="3.7"
     - python: '3.7'
@@ -54,7 +49,7 @@ install:
 
 script:
   - conda list
-  - pytest dask_glm
+  - travis_wait 30 pytest dask_glm
   - flake8 dask_glm
   - pip install codecov
   - codecov
